# CoroutinePractice

./: pyproject.toml
CeleryPractice/celery_basic/: tasks.py  use_settings_app.py
coroutine_basic/: async_database.py  async_task_cancel.py  concurrent_limit.py  coroutine_http.py  producer_and_consumer.py  simple_async.py  test.sqlite3  timeout_task_handle.py
