[tool.poetry]
name = "coroutinepractice"
version = "0.1.0"
description = ""
authors = ["VincentAdamNemessis <vincentadamnemessis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asyncio = "^3.4.3"
aiohttp = "^3.10.5"
aiosqlite = "^0.20.0"
sqlmodel = "^0.0.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
